--- a/index.html
+++ b/index.html
@@ -1,67 +1,36 @@
-<!DOCTYPE html>
-<html ng-app="app">
-<head>
-    <meta charset="UTF-8">
-    <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AppLa</title>
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link href="bower_components/materialize/dist/css/materialize.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-</head>
-<body ng-cloak class="grey lighten-3">
-<div ui-view></div>
+<!doctype html>
+<html>
+  <head>
+    <title>Appla</title>
+    <style>
+      * { margin: 0; padding: 0; box-sizing: border-box; }
+      body { font: 13px Helvetica, Arial; }
+      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
+      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+      #messages { list-style-type: none; margin: 0; padding: 0; }
+      #messages li { padding: 5px 10px; }
+      #messages li:nth-child(odd) { background: #eee; }
+    </style>
+  </head>
+  <body>
+    <ul id="messages"></ul>
+    <form action="">
+      <input id="m" autocomplete="off" /><button>Send</button>
+    </form>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script>
+      var socket = io();
+      $('form').submit(function(){
+        socket.emit('chat message', $('#m').val());
+        $('#m').val('');
+        return false;
+      });
 
-
-<!-- SocketIO Client lib -->
-<script type="text/javascript" src="/socket.io/socket.io.js"></script>
-
-<!-- JS libraries -->
-<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-<script type="text/javascript" src="bower_components/moment/moment.js"></script>
-<script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
-<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-<script type="text/javascript" src="bower_components/materialize/dist/js/materialize.min.js"></script>
-<script type="text/javascript" src="bower_components/angular-socket-io/socket.min.js"></script>
-<script type="text/javascript" src="bower_components/angular-scroll-glue/src/scrollglue.js"></script>
-
-
-<!-- App modules -->
-<script type="text/javascript" src="modules/app.module.js"></script>
-<script type="text/javascript" src="modules/app.services.js"></script>
-<script type="text/javascript" src="modules/app.route.js"></script>
-
-<!-- Authentication modules -->
-<script type="text/javascript" src="modules/auth/auth.module.js"></script>
-<script type="text/javascript" src="modules/auth/auth.controller.js"></script>
-<script type="text/javascript" src="modules/auth/auth.service.js"></script>
-<script type="text/javascript" src="modules/auth/auth.directive.js"></script>
-
-<!-- Home modules -->
-<script type="text/javascript" src="modules/home/home.module.js"></script>
-<script type="text/javascript" src="modules/home/home.controller.js"></script>
-<script type="text/javascript" src="modules/home/home.service.js"></script>
-<script type="text/javascript" src="modules/home/home.directive.js"></script>
-
-<!-- Room modules -->
-<script type="text/javascript" src="modules/room/room.module.js"></script>
-<script type="text/javascript" src="modules/room/room.controller.js"></script>
-<script type="text/javascript" src="modules/room/room.service.js"></script>
-<script type="text/javascript" src="modules/room/room.directive.js"></script>
-
-<script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-22174047-4', 'auto');
-    ga('send', 'pageview');
-
-</script>
-
-</body>
+      socket.on('chat message', function(msg){
+        $('#messages').append($('<li>').text(msg));
+      })
+    </script>
+  </body>
 </html>
