--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,11 @@
 <script type="text/javascript" src="bower_components/angular-socket-io/socket.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-scroll-glue/src/scrollglue.js"></script>
 
+<!-- d3 -->
+<script type="text/javascript" src="libs/d3/d3.js"></script>
+<script type="text/javascript" src="libs/d3/d3.layout.cloud.js"></script>
+<script type="text/javascript" src="libs/d3/d3.wordcloud.js"></script>
+
 
 <!-- App modules -->
 <script type="text/javascript" src="modules/app.module.js"></script>
